--- a/html/index.html
+++ b/html/index.html
@@ -24,6 +24,7 @@
       <a href wm-nav="exercicios/listaAninhada.html">04 - Lista Aninhada</a> |
       <a href wm-nav="exercicios/links.html">05 - Links</a> |
       <a href wm-nav="exercicios/Tabela.html">06 - Tabela</a> |
+      <a href wm-nav="exercicios/Form/Form.html">07 - Formulário</a> |
   </nav>
   <section id="conteudo"></section>
   <footer>
