--- a/html/index.html
+++ b/html/index.html
@@ -25,6 +25,7 @@
       <a href wm-nav="exercicios/links.html">05 - Links</a> |
       <a href wm-nav="exercicios/Tabela.html">06 - Tabela</a> |
       <a href wm-nav="exercicios/Form/Form.html">07 - Formulário</a> |
+      <a href wm-nav="exercicios/imagens.html">08 - Imagens</a> |
   </nav>
   <section id="conteudo"></section>
   <footer>
